--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas
-numpy
-scikit-learn
+pandas                    2.2.3
+numpy                     2.0.2
+scikit-learn              1.5.2
 xgboost
 lightgbm
 catboost
+
