--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pandas 2.2.3 
-numpy 2.0.2 
-scikit-learn 1.5.2 
-xgboost 
-lightgbm 
+streamlit 1.39.0
+pandas 2.2.3
+numpy 2.0.2
+scikit-learn 1.5.2
+xgboost
+lightgbm
 catboost
+openpyxl 3.1.2
