--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit 1.39.0
-pandas 2.2.3
-numpy 2.0.2
-scikit-learn 1.5.2
+streamlit>=1.39.0
+pandas==2.2.3
+numpy==2.0.2
+scikit-learn==1.5.2
 xgboost
 lightgbm
 catboost
-openpyxl 3.1.2
+openpyxl>=3.1.2
